--- a/package.json
+++ b/package.json
@@ -12,11 +12,18 @@
   },
   "dependencies": {
     "@zeit/next-less": "^1.0.1",
+    "antd": "^3.11.2",
     "fabric": "^2.4.5",
     "less": "^3.9.0",
-    "less-loader": "^4.1.0",
     "next": "^7.0.2",
+    "next-redux-saga": "^3.0.0",
+    "next-redux-wrapper": "^2.1.0",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react-dom": "^16.6.3",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.7",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^0.16.2"
   }
 }
