--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.2.2",
     "@zeit/next-less": "^1.0.1",
     "antd": "^3.11.2",
     "fabric": "^2.4.5",
@@ -25,5 +26,8 @@
     "redux-devtools-extension": "^2.13.7",
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.2"
+  },
+  "devDependencies": {
+    "babel-plugin-import": "^1.11.0"
   }
 }
