--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.2.2",
+    "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
-    "antd": "^3.11.2",
+    "antd": "3.9.2",
     "fabric": "^2.4.5",
     "less": "^3.9.0",
     "next": "^7.0.2",
     "next-redux-saga": "^3.0.0",
     "next-redux-wrapper": "^2.1.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.7",
