--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "antd": "3.9.2",
+    "autoprefixer": "^9.4.4",
     "fabric": "^2.4.5",
     "less": "^3.9.0",
     "next": "^7.0.2",
     "next-redux-saga": "^3.0.0",
     "next-redux-wrapper": "^2.1.0",
+    "postcss-nested": "^4.1.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
